<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Text Art</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="select_picture">Select picture using</string>
    <string name="need_permission">Need Permission</string>
    <string name="permission_msg">This app need permission to use this feature. You can grant them in app settings.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>

    <string name="feed_back">Feedback</string>
    <string name="check_update">Check for Updates</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="title_settings">Settings</string>
    <string name="subject">FeedBack for Text On Photo</string>

    <string name="all_image">All Images</string>
    <string name="brightness">Brightness</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="collage">Collage</string>
    <string name="contrast">Contrast</string>
    <string name="define_roundedimageview" />
    <string name="dialog_discard_title">Changes will not be saved. Do you want to proceed?</string>
    <string name="discard">Discard</string>
    <string name="fab_transformation_scrim_behavior">
        com.google.android.material.transformation.FabTransformationScrimBehavior
    </string>
    <string name="fab_transformation_sheet_behavior">
        com.google.android.material.transformation.FabTransformationSheetBehavior
    </string>

<!--    <string name="firebase_database_url">https://photoup-d7e38.firebaseio.com</string>-->
    <string name="hide_bottom_view_on_scroll_behavior">
        com.google.android.material.behavior.HideBottomViewOnScrollBehavior
    </string>
    <string name="label_background">Background</string>
    <string name="label_background_full_screen">Full Screen</string>
    <string name="label_background_height">Padding Height</string>
    <string name="label_background_radius">Border Radius</string>
    <string name="label_background_width">Padding Width</string>
    <string name="label_text">Text</string>
    <string name="label_text_fonts">Text Font</string>
    <string name="label_text_shadow">Text Shadow</string>
    <string name="label_text_size">Text Size</string>
    <string name="appbar_scrolling_view_behavior">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>


    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_promote">If Text Art makes you happy and satisfy. Please give us 5 stars</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="saturation">Saturation</string>
    <string name="save">SAVE</string>
    <string name="save_and_share">Save and Share</string>
    <string name="search_menu_title">Search</string>
    <string name="share_photo">Share Photo</string>
    <string name="sharpen">Sharpen</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="text_images">%1$d Images</string>
    <string name="text_title_activity_album">Select photos</string>
    <string name="text_title_dialog_sort_by_album">Sort album by</string>
    <string name="text_title_dialog_sort_by_photo">Sort photo by</string>
    <string name="action_sort">sort</string>

    <string name="something_went_wrong">Something went wrong!!</string>
    <string name="internet_error">Make sure you are connected to internet!!</string>
    <string name="ok">ok</string>
    <string name="permission_denied">Please grant permission and try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="internet">Please turn on Internet</string>
    <string name="choose_a_background">Choose a background</string>
    <string name="text_explore">Explore more images from</string>
    <string name="unsplash">Unsplash</string>
    <string name="color">Color</string>
    <string name="nature">Nature</string>
    <string name="love">Love</string>
    <string name="light">Light</string>
    <string name="life_style">Life Style</string>
    <string name="if_you_exit">Are you sure You want to exit ?</string>
    <string name="macro">Macro</string>
    <string name="select">Select</string>
    <string name="quotes1">I look at you and see the rest of my life in front of my eyes</string>
    <string name="saved">Image Saved successfully</string>
    <string name="preview">Preview</string>
    <string name="share">Share Image</string>
    <string name="wall">Set as wallpaper</string>
    <string name="no_thanks">No Thanks</string>
    <string name="watch_now">Watch Now</string>

</resources>
