<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:src="@drawable/ic_back_selected"
                app:tint="@color/selected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerInParent="true"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/san_bold"
                android:gravity="center"
                android:text="@string/choose_a_background"
                android:textColor="@color/selected"
                android:textSize="18sp" />


       <!--     <pl.droidsonroids.gif.GifImageView
                android:id="@+id/iv_game"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/game_gif"
                android:layout_alignParentRight="true"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true" />-->

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layoutSample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="44dp"
                        android:fontFamily="@font/aler"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/text_explore"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        app:cardCornerRadius="@dimen/_5sdp">

                        <Button
                            android:id="@+id/btUnsplash"
                            android:layout_width="150dp"
                            android:layout_height="40dp"
                            android:background="@color/selected"
                            android:fontFamily="@font/san_bold"
                            android:text="@string/unsplash"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/aler"
                    android:gravity="center_vertical"
                    android:text="@string/color"
                    android:textColor="@color/selected"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

<!--                <RelativeLayout-->
<!--                    android:id="@+id/rv_game"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_below="@+id/img_final_card"-->
<!--                    android:layout_marginVertical="10dp">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/iv_game_banner"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_centerInParent="true"-->
<!--                        android:src="@drawable/game_bg_banner_1"-->
<!--                        android:adjustViewBounds="true" />-->

<!--                </RelativeLayout>-->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/aler"
                    android:gravity="center_vertical"
                    android:text="@string/nature"
                    android:textColor="@color/selected"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerNature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/aler"
                    android:gravity="center_vertical"
                    android:text="@string/love"
                    android:textColor="@color/selected"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/aler"
                    android:gravity="center_vertical"
                    android:text="@string/macro"
                    android:textColor="@color/selected"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerMacro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/aler"
                    android:gravity="center_vertical"
                    android:text="@string/light"
                    android:textColor="@color/selected"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

<!--
                <ImageView
                    android:id="@+id/iv_game_banner_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/game_bg_banner_2"
                    android:layout_marginVertical="10dp" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/aler"
                    android:gravity="center_vertical"
                    android:text="@string/life_style"
                    android:textColor="@color/selected"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerLifeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_ad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:visibility="visible" />
</LinearLayout>
