<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@id/layoutPreview"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:background="@android:color/transparent"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/add_text_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@id/previewEffectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="3.0dip"
            android:textAlignment="gravity" />
    </LinearLayout>

    <com.addtext.textonphoto.textart.TART_features.TART_addtext.TART_CustomEditText
        android:id="@id/add_text_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:fontFamily="@font/roboto_slab_regular"
        android:gravity="center"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="5.0dip"
        app:layout_constraintBottom_toTopOf="@id/add_text_toolbar" />

    <LinearLayout
        android:id="@id/add_text_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="330.0dip"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="5.0"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@id/showKeyboard"
            android:layout_width="0.0dip"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:src="@drawable/knack_img_keyboard"
            app:tint="@color/black" />

        <ImageView
            android:id="@id/changeFont"
            android:layout_width="0.0dip"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:src="@drawable/knack_img_text"
            app:tint="@color/black" />

        <ImageView
            android:id="@id/changeColor"
            android:layout_width="0.0dip"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:src="@drawable/knack_img_color" />

        <ImageView
            android:id="@id/changeAlign"
            android:layout_width="0.0dip"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:padding="5.0dip"
            android:src="@drawable/knack_img_alignment_center"
            app:tint="@color/black" />

        <ImageView
            android:id="@id/saveChange"
            android:layout_width="0.0dip"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:padding="9.0dip"
            android:src="@drawable/knack_img_confirm"
            app:tint="@color/black" />
    </LinearLayout>

    <ScrollView
        android:id="@id/change_font_layout"
        android:layout_width="fill_parent"
        android:layout_height="330.0dip"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="@string/label_text_shadow"
                android:textColor="@color/black"
                android:textSize="16.0dip" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/shadows"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:background="#A6000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="@string/label_text_fonts"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/fonts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:background="#A6000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="@string/label_text_size"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <SeekBar
                android:id="@id/textSize"
                style="@style/SeekBaStyle_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:background="@null"
                android:max="100"
                android:splitTrack="false"
                android:thumb="@drawable/knack_custom_thumb" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@id/changeColorLayout"
        android:layout_width="fill_parent"
        android:layout_height="330.0dip"
        android:background="@color/white"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="15.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="@string/label_text"
                android:textColor="@color/black"
                android:textSize="16.0dip" />

            <RelativeLayout
                android:id="@id/arrow_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <ImageView
                    android:id="@id/arrow_color_down"
                    android:layout_width="10.0dip"
                    android:layout_height="15.0dip"
                    android:layout_centerInParent="true"
                    android:src="@drawable/knack_arrow_down"
                    app:tint="@color/black" />
            </RelativeLayout>

            <FrameLayout
                android:id="@id/colorSlider"
                android:layout_width="fill_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_height="wrap_content">

                <com.addtext.textonphoto.textart.TART_features.TART_CarouselPicker
                    android:id="@id/colorCarousel"
                    android:layout_width="fill_parent"
                    android:layout_height="20.0dip"
                    app:item_width="15" />

                <View
                    android:id="@id/highlightColor"
                    android:layout_width="15.0dip"
                    android:layout_height="20.0dip"
                    android:layout_gravity="center"
                    android:background="@drawable/knack_black_border" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:background="@android:color/white">

                <ImageView
                    android:id="@id/arrow_text_texture"
                    android:layout_width="10.0dip"
                    android:layout_height="15.0dip"
                    android:layout_centerInParent="true"
                    android:src="@drawable/knack_arrow_down"
                    app:tint="@color/black" />
            </RelativeLayout>

            <FrameLayout
                android:id="@id/frameTextTextureSlider"
                android:layout_width="fill_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_height="wrap_content">

                <com.addtext.textonphoto.textart.TART_features.TART_CarouselPicker
                    android:id="@id/textTextureSlider"
                    android:layout_width="fill_parent"
                    android:layout_height="28.0dip"
                    app:item_width="28" />

                <View
                    android:id="@id/highlightTextTexture"
                    android:layout_width="28.0dip"
                    android:layout_height="28.0dip"
                    android:layout_gravity="center"
                    android:background="@drawable/knack_black_border" />
            </FrameLayout>

            <SeekBar
                android:id="@id/textTransparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:background="@null"
                android:max="255"
                android:progressDrawable="@drawable/knack_progress"
                android:splitTrack="false"
                android:thumb="@drawable/knack_custom_thumb" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_regular"
                    android:text="@string/label_background"
                    android:textColor="@color/black"
                    android:textSize="16.0dip" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@id/switchBackgroundTexture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:theme="@style/SCBSwitch_1" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/arrowBackgroundColor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <ImageView
                    android:id="@id/arrowBackgroundColorDown"
                    android:layout_width="10.0dip"
                    android:layout_height="15.0dip"
                    android:layout_centerInParent="true"
                    android:src="@drawable/knack_arrow_down"
                    app:tint="@color/black" />
            </RelativeLayout>

            <FrameLayout
                android:id="@id/carouselBackgroundColor"
                android:layout_width="fill_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_height="wrap_content">

                <com.addtext.textonphoto.textart.TART_features.TART_CarouselPicker
                    android:id="@id/backgroundColorCarousel"
                    android:layout_width="fill_parent"
                    android:layout_height="20.0dip"
                    app:item_width="15" />

                <View
                    android:id="@id/highlightBackgroundColor"
                    android:layout_width="15.0dip"
                    android:layout_height="20.0dip"
                    android:layout_gravity="center"
                    android:background="@drawable/knack_black_border" />
            </FrameLayout>

            <SeekBar
                android:id="@id/backgroundTransparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:background="@null"
                android:max="255"
                android:progressDrawable="@drawable/knack_progress"
                android:splitTrack="false"
                android:thumb="@drawable/knack_custom_thumb" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_regular"
                        android:text="@string/label_background_full_screen"
                        android:textColor="@color/black"
                        android:textSize="16.0dip" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@id/backgroundFullScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:buttonTint="@drawable/knack_checkbox" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_regular"
                        android:text="@string/label_background_radius"
                        android:textColor="@color/black"
                        android:textSize="16.0dip" />

                    <SeekBar
                        android:id="@id/backgroundBorderRadius"
                        style="@style/SeekBaStyle_2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15.0dip"
                        android:background="@null"
                        android:max="30"
                        android:progressDrawable="@drawable/knack_seekbar_normal"
                        android:splitTrack="false"
                        android:thumb="@drawable/knack_custom_thumb" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:orientation="horizontal"
                android:weightSum="4.0">

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_regular"
                        android:text="@string/label_background_width"
                        android:textColor="@color/black"
                        android:textSize="16.0dip" />

                    <SeekBar
                        android:id="@id/backgroundWidth"
                        style="@style/SeekBaStyle_2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15.0dip"
                        android:background="@null"
                        android:max="50"
                        android:progressDrawable="@drawable/knack_seekbar_normal"
                        android:splitTrack="false"
                        android:thumb="@drawable/knack_custom_thumb" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_regular"
                        android:text="@string/label_background_height"
                        android:textColor="@color/black"
                        android:textSize="16.0dip" />

                    <SeekBar
                        android:id="@id/backgroundHeight"
                        style="@style/SeekBaStyle_2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15.0dip"
                        android:background="@null"
                        android:max="50"
                        android:progressDrawable="@drawable/knack_seekbar_normal"
                        android:splitTrack="false"
                        android:thumb="@drawable/knack_custom_thumb" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>